--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,14 @@
     <a class="text-xl mb-2" href="tailwind-card-using-class"
       >tailwind-card-using-class</a
     >
-    <a class="text-xl mb-2" href="tailwind-card-using-vue"
-      >tailwind-card-using-vue</a
-    >
-    <a class="text-xl mb-2" href="tailwind-card-using-react"
+    <a class="text-xl mb-2" href="tailwind-card-vue">tailwind-card-using-vue</a>
+    <a class="text-xl mb-2" href="tailwind-card-react"
       >tailwind-card-using-react</a
     >
     <a class="text-xl mb-2" href="tailwind-card-responsive"
       >tailwind-card-responsive</a
     >
-    <a class="text-xl mb-2" href="tailwind-card-hover"
-      >tailwind-card-hover</a
-    >
+    <a class="text-xl mb-2" href="tailwind-card-hover">tailwind-card-hover</a>
     <a class="text-xl mb-2" href="custom-tailwind">customising tailwind</a>
   </body>
 </html>
