added htm example

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
     <a class="text-xl mb-2" href="tailwind-card-react"
       >tailwind-card-using-react</a
     >
+    <a class="text-xl mb-2" href="tailwind-card-htm"
+      >tailwind-card-using-preact-htm</a
+    >
     <a class="text-xl mb-2" href="tailwind-card-responsive"
       >tailwind-card-responsive</a
     >
